--- a/styles/style.css
+++ b/styles/style.css
@@ -47,7 +47,7 @@ h6 {
 	text-align: center;	
 }
 .btn, .btn-large, .btn-small {    
-    background-color: red;
+    background-color: #ee6e73;
 }
 
 .zemelapis{
